<resources>
    <string name="app_name">RMusic Player</string>
    <string name="server">Server address</string>
    <string name="login">Your login</string>
    <string name="password">Your password</string>
    <string name="enter">Login</string>
    <string name="signUp">Sign up</string>
    <string name="repeat_password">Repeat password</string>
    <string name="your_name">Your name</string>
    <string name="your_lastname">Your lastname</string>
    <string name="back">Back</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="get_all_songs">Get all songs</string>
    <string name="previous_song"><![CDATA[<<]]></string>
    <string name="pause_song">||</string>
    <string name="next_song"><![CDATA[>>]]></string>
</resources>
