<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ui.SignUpActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/server_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/server" />

    <EditText
        android:id="@+id/server_signUp"
        android:layout_below="@id/server_label"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/username_label"
        android:layout_below="@id/server_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login" />

    <EditText
        android:id="@+id/username_signUp"
        android:layout_below="@id/username_label"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/password_label"
        android:layout_below="@id/username_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password" />

    <EditText
        android:id="@+id/password_signUp"
        android:layout_below="@id/password_label"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/password_repeat_label"
        android:layout_below="@id/password_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/repeat_password" />

    <EditText
        android:id="@+id/repeatPassword_signUp"
        android:layout_below="@id/password_repeat_label"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- -->

    <TextView
        android:id="@+id/name_label"
        android:layout_below="@id/repeatPassword_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_name" />

    <EditText
        android:id="@+id/name_signUp"
        android:layout_below="@id/name_label"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/lastname_label"
        android:layout_below="@id/name_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_lastname" />

    <EditText
        android:id="@+id/lastname_signUp"
        android:layout_below="@id/lastname_label"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/back_button"
        android:layout_alignTop="@id/doSignUp_button"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back" />

    <Button
        android:id="@+id/doSignUp_button"
        android:layout_below="@+id/lastname_signUp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUp" />
    </RelativeLayout>
</ScrollView>