<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ui.LoginActivity">

    <TextView
        android:id="@+id/login_server_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/server" />

    <EditText
        android:id="@+id/login_server"
        android:layout_below="@id/login_server_label"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/login_username_label"
        android:layout_below="@id/login_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login" />

    <EditText
        android:id="@+id/login_username"
        android:layout_below="@id/login_username_label"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/login_password_label"
        android:layout_below="@id/login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password" />

    <EditText
        android:id="@+id/login_password"
        android:layout_below="@id/login_password_label"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/login_signUp_button"
        android:layout_toStartOf="@id/login_button"
        android:layout_alignTop="@id/login_button"
        android:layout_marginEnd="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUp" />

    <Button
        android:id="@+id/login_button"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="5dp"
        android:layout_below="@id/login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter" />
</RelativeLayout>