<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerActivity">
    <ImageView android:id="@+id/player_main_image" android:layout_width="match_parent" android:layout_height="match_parent" />
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/belowBar" android:orientation="vertical"
                  android:layout_alignParentBottom="true">
        <LinearLayout android:id="@+id/info_linear_layout" android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:padding="10dp">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Artist" />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text=" - " />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Title" />
            </LinearLayout>
            <SeekBar android:id="@+id/player_audioPosition" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10dp" />
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal"
            android:layout_below="@id/info_linear_layout" android:padding="10dp">
            <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/previous_song" android:layout_weight="1"></Button>
            <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pause_song" android:layout_weight="1"></Button>
            <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/next_song" android:layout_weight="1"></Button>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>